--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,60 @@ body, html {
 
 .radio-group {
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .radio-group label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+    padding-left: 2.5rem;
+    cursor: pointer;
+    font-size: 1rem;
 }
 
+.radio-group input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.checkmark {
+    position: absolute;
+    left: 0;
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: #fff;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+}
+
+label:hover .checkmark {
+  border-color: #000;
+}
+
+.radio-group input[type="radio"]:checked + .checkmark {
+  background-color: #000;
+}
+
+.checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.radio-group input[type="radio"]:checked + .checkmark::after {
+  display: block;
+}
+
+.checkmark::after {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.8rem;
+  height: 0.8rem;
+  border-radius: 50%;
+  background-color: #ffaaaf;
+}
