--- a/styles.css
+++ b/styles.css
@@ -1,89 +1,92 @@
-body, html {
-    height: 100%;
+body,
+html {
+  height: 100%;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .hero {
-    position: relative;
-    height: 100vh;
-    display: flex;
-    align-items: center;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .hero-image {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .hero-text h1 {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-  }
-  
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
 .hero-text p {
-   font-size: 1.5rem;
-   margin-bottom: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .reg-form {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 2rem;
-    background-color: #f1f1f1;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 70%;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: #f1f1f1;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .form-group {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .form-group label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 .form-group input {
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    border: none;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    font-size: 1rem;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
 }
 
 .radio-group {
-    margin-bottom: 1rem;
-    display: flex;
-    flex-direction: column;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .radio-group label {
-    margin-bottom: 1rem;
-    display: flex;
-    align-items: center;
-    position: relative;
-    padding-left: 2.5rem;
-    cursor: pointer;
-    font-size: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-left: 2rem;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 .radio-group input[type="radio"] {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .checkmark {
-    position: absolute;
-    left: 0;
-    height: 1.5rem;
-    width: 1.5rem;
-    background-color: #fff;
-    border-radius: 50%;
-    border: 1px solid #ccc;
+  position: absolute;
+  left: 0;
+  height: 1rem;
+  width: 1rem;
+  background-color: #fff;
+  border-radius: 80%;
+  border: 1px solid #ccc;
 }
 
 label:hover .checkmark {
@@ -108,8 +111,8 @@ label:hover .checkmark {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 0.8rem;
-  height: 0.8rem;
-  border-radius: 50%;
-  background-color: #ffaaaf;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 80%;
+  background-color: #fff;
 }
