--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,51 @@ html {
   margin-right: 50px;
 }
 
+header {
+  background-color: #000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  z-index: 999;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-left: 1rem;
+}
+
+nav a {
+  color: rgb(225, 129, 18);
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.5rem;
+  transition: all 0.2 ease-in-out;
+}
+
+nav a:hover {
+  /* background-color: #333; */
+  color: #fff;
+}
+
 .hero {
   position: relative;
   height: 100vh;
