--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body,
 html {
-  /*height: 100%; */
+  height: 100%;
   margin-left: 50px;
   margin-right: 50px;
 }
@@ -26,7 +26,7 @@ nav {
 }
 
 nav .logo img {
-  max-height: 50px;
+  max-height: 70px;
 }
 
 nav ul {
@@ -43,7 +43,7 @@ nav li {
 nav a {
   color: #faa21f;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: bold;
   padding: 0.5rem;
   transition: all 0.2 ease-in-out;
@@ -167,4 +167,45 @@ label:hover .checkmark {
   height: 0.5rem;
   border-radius: 80%;
   background-color: #fff;
+}
+s .data-protection {
+  font-size: 1.2rem;
+}
+
+footer {
+  background-color: #000;
+  color: #faa21f;
+  padding: 1rem;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.social {
+  display: flex;
+}
+
+.social a {
+  display: inline-block;
+  margin-right: 1rem;
+  color: #fff;
+}
+
+i {
+  font-size: 1.5rem;
+  transition: all 0.2s ease-in-out;
+}
+
+i:hover {
+  transform: scale(1.2);
 }
