--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body,
 html {
-  height: 100%;
+  min-height: 100%;
   margin-left: 60px;
   margin-right: 50px;
 }
@@ -61,31 +61,22 @@ nav a:hover {
   color: #fff;
 }
 
-.hero {
+.top-text {
   margin-top: 120px;
   position: relative;
-  /*height: 100vh;
-  display: flex;
-  align-items: center; */
+  font-family: sans-serif;
+  color: #fff;
 }
 
-/* .hero-image {
-  height: 100%;
-  max-width: 100%;
-  object-fit: cover;
-} */
-
-.hero-text h1 {
+.top-text h1 {
   font-size: 2.5rem;
   margin-bottom: 1rem;
   text-align: center;
-  font-family: sans-serif;
 }
 
-.hero-text p {
+.top-text p {
   font-size: 1.3rem;
   margin-bottom: 2rem;
-  font-family: sans-serif;
 }
 
 .reg-form {
@@ -129,6 +120,7 @@ nav a:hover {
 h3 {
   font-family: sans-serif;
   font-size: 1.2rem;
+  color: #fff;
 }
 
 .radio-group label {
@@ -189,9 +181,11 @@ label:hover .checkmark {
 .data-protection {
   font-size: 1.3rem;
   font-family: sans-serif;
+  color: #fff;
 }
 
 footer {
+  clear: both;
   background-color: #000;
   color: #faa21f;
   padding: 1rem;
