--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,42 @@
-body,
+/*body,
 html {
   min-height: 100%;
   margin-left: 60px;
   margin-right: 50px;
+} */
+
+.body-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  -webkit-box-flex: 1;
+  flex: 1;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+header,
+main,
+footer {
+  margin: 0;
+  display: block;
+}
+
+header,
+footer {
+  min-height: 80px;
 }
 
 body {
