--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-/*body,
-html {
-  min-height: 100%;
-  margin-left: 60px;
-  margin-right: 50px;
-} */
-
 .body-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,6 +12,8 @@ html {
 main {
   -webkit-box-flex: 1;
   flex: 1;
+  padding-left: 150px;
+  padding-right: 150px;
 }
 
 body,
@@ -145,6 +140,21 @@ nav a:hover {
   font-family: sans-serif;
 }
 
+button[type="submit"] {
+  background-color: #faa21f;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 0.8rem 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+button[type="submit"]:hover {
+  background-color: rgb(160, 38, 38);
+}
+
 .radio-group {
   margin-bottom: 1rem;
   display: flex;
@@ -154,7 +164,7 @@ nav a:hover {
 h3 {
   font-family: sans-serif;
   font-size: 1.2rem;
-  color: #fff;
+  color: #000;
 }
 
 .radio-group label {
